tests/paczka1/small_fuzzy/38590167.err
Error in line 2: UAZhh0gNT S531 38,6
Error in line 7: 77C S61 11,8
Error in line 8: 6aduxltdC8w S531 54,76
Error in line 4: 77C S361 45,3
